--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Karla:ital,wght@0,200..800;1,200..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet"
+    />
 
     <link
       rel="icon"
@@ -16,7 +22,7 @@
     <title>Frontend Mentor | Contact form</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-    <style>
+    <!-- <style>
       .attribution {
         font-size: 11px;
         text-align: center;
@@ -24,7 +30,7 @@
       .attribution a {
         color: hsl(228, 45%, 44%);
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
@@ -39,55 +45,71 @@
       <body>
         <div class="container">
           <form class="contact-form">
-            <h2>Contact Us</h2>
-            <div class="form-group">
-              <label for="first-name">First Name *</label>
-              <input type="text" id="first-name" name="first-name" required />
-            </div>
-            <div class="form-group">
-              <label for="last-name">Last Name *</label>
-              <input type="text" id="last-name" name="last-name" required />
-            </div>
-            <div class="form-group">
-              <label for="email">Email Address *</label>
-              <input type="email" id="email" name="email" required />
-            </div>
-            <div class="form-group">
-              <label>Query Type *</label>
-              <div class="radio-group">
-                <input
-                  type="radio"
-                  id="general-enquiry"
-                  name="query-type"
-                  value="General Enquiry"
-                  required
-                />
-                <label for="general-enquiry">General Enquiry</label>
-                <input
-                  type="radio"
-                  id="support-request"
-                  name="query-type"
-                  value="Support Request"
-                  required
-                />
-                <label for="support-request">Support Request</label>
+            <div><h2>Contact Us</h2></div>
+            <div class="FLgrouped">
+              <div class="form-group firstname">
+                <label for="first-name">First Name *</label><br />
+                <input type="text" id="first-name" name="first-name" required />
+              </div>
+              <div class="form-group lastname">
+                <label for="last-name">Last Name *</label><br />
+
+                <input type="text" id="last-name" name="last-name" required />
               </div>
             </div>
-            <div class="form-group">
-              <label for="message">Message *</label>
-              <textarea
-                id="message"
-                name="message"
-                rows="4"
-                required
-              ></textarea>
+            <div class="grouped-email">
+              <div class="form-group email">
+                <label for="email">Email Address *</label><br />
+                <input type="email" id="email" name="email" required />
+              </div>
             </div>
+
+            <div class="form-group">
+              <label>Query Type *</label>
+
+              <div class="radio-group">
+                <div class="gen-enquiry">
+                  <input
+                    type="radio"
+                    id="general-enquiry"
+                    name="query-type"
+                    value="General Enquiry"
+                    required
+                  />
+
+                  <label for="general-enquiry">General Enquiry</label>
+                </div>
+                <div class="support-request">
+                  <input
+                    type="radio"
+                    id="support-request"
+                    name="query-type"
+                    value="Support Request"
+                    required
+                  />
+
+                  <label for="support-request">Support Request</label>
+                </div>
+              </div>
+              <div class="form-group">
+                <label for="message">Message *</label><br />
+                
+                <textarea
+                  id="message"
+                  name="message"
+                  rows="5"
+                  required
+                ></textarea>
+              </div>
+            </div>
+
             <div class="form-group consent">
               <input type="checkbox" id="consent" name="consent" required />
               <label for="consent"
                 >I consent to being contacted by the team *</label
               >
             </div>
+
             <button type="submit">Submit</button>
           </form>
         </div>
