--- a/index.html
+++ b/index.html
@@ -48,24 +48,24 @@
             <div><h2>Contact Us</h2></div>
             <div class="FLgrouped">
               <div class="form-group firstname">
-                <label for="first-name">First Name *</label><br />
+                <label for="first-name">First Name</label><br />
                 <input type="text" id="first-name" name="first-name" required />
               </div>
               <div class="form-group lastname">
-                <label for="last-name">Last Name *</label><br />
+                <label for="last-name">Last Name </label><br />
 
                 <input type="text" id="last-name" name="last-name" required />
               </div>
             </div>
             <div class="grouped-email">
               <div class="form-group email">
-                <label for="email">Email Address *</label><br />
+                <label for="email">Email Address </label><br />
                 <input type="email" id="email" name="email" required />
               </div>
             </div>
 
             <div class="form-group">
-              <label>Query Type *</label>
+              <label id="labelq">Query Type </label>
 
               <div class="radio-group">
                 <div class="gen-enquiry">
@@ -92,21 +92,22 @@
                 </div>
               </div>
               <div class="form-group">
-                <label for="message">Message *</label><br />
+                <label id="labelm" for="message">Message </label><br />
                 
-                <textarea
-                  id="message"
-                  name="message"
-                  rows="5"
-                  required
-                ></textarea>
+                <textarea class="form-message"
+                id="message"
+                name="message"
+                rows="5"
+                required
+                draggable="false"
+              ></textarea>
               </div>
             </div>
 
             <div class="form-group consent">
               <input type="checkbox" id="consent" name="consent" required />
               <label for="consent"
-                >I consent to being contacted by the team *</label
+                >I consent to being contacted by the team </label
               >
             </div>
 
